Fixed css to hide scrollbar
fixed a bug with dragging in editor

--- a/TobaFly.css
+++ b/TobaFly.css
@@ -1,8 +1,8 @@
 
 canvas {  
-  { margin:0; padding:0;
+   margin:0; padding:0;
      }
- html, body { width:100%; height:100%;}
+ html, body { margin: 0; padding: 0; width:100%; height:100%;}
  canvas { display:block; 
   overflow:hidden;
   margin:0; padding:0;
